Updated path to Geonovum /media/logos

--- a/js/geonovum/templates/headers.html
+++ b/js/geonovum/templates/headers.html
@@ -79,7 +79,7 @@
     <dd class='copyright'>
       <abbr title='Creative Commons Naamsvermelding 3.0 Licentie'>
         <a href='https://creativecommons.org/licenses/by-nd/3.0/nl/'>
-            <img src='/media/CreativeCommons3.0.png' alt='CreativeCommons' width='588px' height='49px'>
+            <img src='/media/logos/CreativeCommons3.0.png' alt='CreativeCommons' width='588px' height='49px'>
         </a>
       </abbr>
     </dd>
@@ -87,6 +87,5 @@
         <p class='copyright'>{{{additionalCopyrightHolders}}}</p>
     {{/if}}
   {{/if}}
-  
   <hr title="Separator for header">
 </div>
