--- a/js/geonovum/templates/sotd.html
+++ b/js/geonovum/templates/sotd.html
@@ -4,11 +4,11 @@
     </p>
     {{#switch specStatus}}
         {{#case "GEO-DEF"}}
-            <p>Geonovum definitieve standaard.<p>
+            <p>Geonovum definitieve standaard.</p>
         {{/case}}
         {{#case "GEO-ED"}}
             <p>Dit is een werkversie die op elk moment kan worden gewijzigd, verwijderd of vervangen 
-            door andere documenten. Het is geen door de werkgroep goedgekeurde consultatieversie.<p>
+            door andere documenten. Het is geen door de werkgroep goedgekeurde consultatieversie.</p>
         {{/case}}
         {{#case "GEO-WD"}}
             <p>Dit is een door de werkgroep goedgekeurde consultatieversie. Commentaar over dit 
