fix(templates/sotd): fix hb issue

--- a/js/geonovum/templates/sotd.html
+++ b/js/geonovum/templates/sotd.html
@@ -21,5 +21,5 @@
             dit definitief concept. Keurt zij het goed, dan is er een nieuwe standaard.</p>
         {{/case}}
     {{/switch}}
-    {{sotdCustomParagraph}}
+    {{{sotdCustomParagraph}}}
 </section>
