--- a/media/localstyle.css
+++ b/media/localstyle.css
@@ -4,12 +4,15 @@
  *
  */
  
-/* Leaflet */
+/******************************************************************************/
+/*                              Leaflet Figures                               */
+/******************************************************************************/
 @import "../js/geonovum/deps/leaflet.css";
   
 #leaflet-figure {
-  border: 1px solid black;
-  width: 100%;
-  height: 600px;
-  margin-bottom: 10px;
+    background: #FFFFFF;
+    border: 1px solid #8C8C8C;
+    width: 100%;
+    height: 600px;
+    margin-bottom: 10px;
 }
