--- a/media/base.css
+++ b/media/base.css
@@ -588,7 +588,7 @@
     border: 1px solid #8C8C8C;
     width: 100%;
     height: 600px;
-    margin-bottom: 10px;
+    margin-bottom: 1em;
 }
 
 /******************************************************************************/
